error1.txt
    Checking soroban-debugger v0.1.0 (C:\Users\nwaug\Desktop\Blockchain\DripsWave\soroban-debugger)
error: unknown start of token: \
   --> src\analyzer\symbolic.rs:188:49
    |
188 |                 let clean_panic = panic.replace(\"\\\"\", \"\\\"\\\\\\\"\");
    |                                                 ^

error: unknown start of token: \
   --> src\analyzer\symbolic.rs:189:41
    |
189 |                 writeln!(toml, "panic = \"{}\"", clean_panic).unwrap();
    |                                         ^

error[E0425]: cannot find value `clean_panic` in this scope
   --> src\analyzer\symbolic.rs:189:50
    |
189 |                 writeln!(toml, "panic = \"{}\"", clean_panic).unwrap();
    |                                                  ^^^^^^^^^^^ not found in this scope

error: suffixes on string literals are invalid
   --> src\analyzer\symbolic.rs:188:50
    |
188 |                   let clean_panic = panic.replace(\"\\\"\", \"\\\"\\\\\\\"\");
    |  __________________________________________________^
189 | |                 writeln!(toml, "panic = \"{}\"", clean_panic).unwrap();
    | |_____________________________________^ invalid suffix `panic`

error[E0070]: invalid left-hand side of assignment
   --> src\analyzer\symbolic.rs:189:39
    |
188 |                   let clean_panic = panic.replace(\"\\\"\", \"\\\"\\\\\\\"\");
    |  __________________________________________________-
189 | |                 writeln!(toml, "panic = \"{}\"", clean_panic).unwrap();
    | |                                     - ^
    | |_____________________________________|
    |                                       cannot assign to this expression

error[E0599]: no method named `unwrap` found for struct `std::string::String` in the current scope
   --> src\analyzer\symbolic.rs:189:63
    |
188 |                   let clean_panic = panic.replace(\"\\\"\", \"\\\"\\\\\\\"\");
    |  ___________________________________-
189 | |                 writeln!(toml, "panic = \"{}\"", clean_panic).unwrap();
    | |                                                              -^^^^^^ method not found in `std::string::String`
    | |______________________________________________________________|
    |

Some errors have detailed explanations: E0070, E0425, E0599.
For more information about an error, try `rustc --explain E0070`.
error: could not compile `soroban-debugger` (lib) due to 6 previous errors
